2010-04-08  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR target/43643
	* gcc.dg/pr43643.c: New test.

2010-04-08  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43679
	* gcc.c-torture/compile/pr43679.c: New testcase.

2010-04-08  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43670
	* gcc.dg/pr43670.c: New test.

2010-04-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/43668
	* gcc.target/i386/pr43668.c: New.

2010-04-06  Jason Merrill  <jason@redhat.com>

	PR c++/43648
	* g++.dg/template/dtor8.C: New.

2010-04-06  Dodji Seketeli  <dodji@redhat.com>

	* g++.dg/debug/dwarf2/redeclaration-1.C: Moved from 
	c-c++-common/dwarf2/redeclaration-1.C

2010-04-06  Jakub Jelinek  <jakub@redhat.com>

	PR target/43638
	* gcc.target/i386/pr43638.c: New test.

2010-04-06  Richard Guenther  <rguenther@suse.de>

	PR middle-end/43661
	* gcc.c-torture/compile/pr43661.c: New testcase.

2010-04-06  Jakub Jelinek  <jakub@redhat.com>

	* gcc.target/s390/stackcheck1.c: Add dg-warning.

2010-04-04  Sebastian Pop  <sebastian.pop@amd.com>

	* gcc.dg/vect/pr43430-1.c: Don't use uint8_t.

2010-04-02  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43629
	* gcc.c-torture/execute/pr43629.c: New testcase.

2010-04-01  Janne Blomqvist  <jb@gcc.gnu.org>
            Dominique d'Humieres  <dominiq@lps.ens.fr>

	PR libfortran/43605
	* gfortran.dg/ftell_3.f90: Enhance test case by reading more.

2010-04-01  Dodji Seketeli  <dodji@redhat.com>

	PR debug/43325
	* c-c++-common/dwarf2/redeclaration-1.C: New test.

2010-04-01  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/initlist12.C: Adjust expected errors.

2010-04-01  Janne Blomqvist  <jb@gcc.gnu.org>
	    Manfred Schwarb  <manfred99@gmx.ch>

	PR libfortran/43605
	* gfortran.dg/ftell_3.f90: New test.

2010-04-01  Richard Guenther  <rguenther@suse.de>

	PR middle-end/43614
	* gcc.c-torture/compile/pr43614.c: New testcase.

2010-04-01  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/43141